--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,19 +1,21 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Messenger Rando Generator",
+  "name": "The Messenger Randomizer Seed Generator",
+  "description" : "Generation site for The Messenger Randomizer seed mapping files.",
+  "lang": "en-US",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "./assets/MediumMageIcon.png",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "./assets/MediumMageIcon.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "logo512.png",
+      "src": "./assets/MediumMageIcon.png",
       "type": "image/png",
       "sizes": "512x512"
     }
